tests/functional/lang/eval-fail-toXML-infinite-recursion.err.exp
error:
       … while calling the 'toXML' builtin
         at /pwd/lang/eval-fail-toXML-infinite-recursion.nix:6:1:
            5| in
            6| builtins.toXML a
             | ^
            7|

       error: infinite recursion encountered while converting Nix value to XML: the value at .b is the same as the top-level value (only cycle-free Nix values can be converted to XML)
       at /pwd/lang/eval-fail-toXML-infinite-recursion.nix:2:7:
            1| let
            2|   a = {
             |       ^
            3|     b = a;
